# kascade

./: .gitignore  .gitmodules  CONTRIBUTING.md  NOTICE.md  README.md  SUPPORT.md  install.sh  pyproject.toml
results/head_mappings/: DeepSeek-R1-Distill-Llama-8B_layers_0_2_8_13_14.npy  Qwen3-8B_layers_0_2_7_14_23.npy
scripts/: __init__.py  ablations.py  benchmark_decode.py  benchmark_prefill.py  eval_aime.py  eval_lb.py  eval_script.py
src/: __init__.py  dataset2config.py  model_utils.py  prompt_templates.py  utils.py
src/kernels/: __init__.py  kernel_utils.py
src/kernels/flash_attention/: __init__.py  example_gqa_fwd_bshd_wgmma_pipelined.py  recompute_kascade_gqa_prefill.py  (+1 more)
src/metrics/: __init__.py  math_grader.py  metrics.py  parser.py
src/qadatasets/: HotPotDataset.py  LongBenchMultihopDataset.py  MathDataset.py  MusiqueDataset.py  QADataset.py  TwoWikiDataset.py  __init__.py
src/runners/: __init__.py  base.py  metrics_runner.py  stats_runner.py
src/strategies/: BaselineStrategy.py  DecodeOnlyKascadeStrategy.py  EfficientKascadeStrategy.py  KascadeStrategy.py  LessIsMoreStrategy.py  NoRemapKascadeStrategy.py  OmniKVStrategy.py  OracleTopkLayer0GlobalStrategy.py  OracleTopkStrategy.py  PooledKascadeStrategy.py  PostSoftmaxAllHeadsPooledOracleTopKStrategy.py  PostSoftmaxAllHeadsPooledPrefillTopkStrategy.py  PostSoftmaxGQAPooledOracleTopKStrategy.py  PostSoftmaxPooledPrefillTopkStrategy.py  PreSoftmaxGQAPooledOracleTopKStrategy.py  PreSoftmaxPooledPrefillTopkStrategy.py  QuestStrategy.py  SinkedSlidingWindowStrategy.py  Strategy.py  __init__.py  attention_utils.py
(+12 files in other folders)
